--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-491.0KB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇺🇸 美国-643.9KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-231.0KB/s(Youtube:不良林), server: 116.129.254.177, port: 65077, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-346.0KB/s(Youtube:不良林), server: 120.233.150.146, port: 65092, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇦🇺 澳大利亚-471.3KB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇨🇦 加拿大-527.0KB/s(Youtube:不良林), server: 134.195.196.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-360.5KB/s(Youtube:不良林), server: ftp.cn.debian.cdnet.in, port: 8010, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
+  - {name: 🇨🇳 中国-255.4KB/s(Youtube:不良林), server: 116.129.254.177, port: 65048, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-697.6KB/s(Youtube:不良林), server: 120.233.151.171, port: 8020, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
+  - {name: 🇨🇳 中国-372.8KB/s(Youtube:不良林), server: ftp.cn.debian.cdnet.in, port: 8030, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
+  - {name: 🇺🇸 美国-876.4KB/s(Youtube:不良林), server: 173.82.205.212, port: 18088, type: vmess, uuid: 727b39a8-a8b7-11ec-8f28-f9224e8647f5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /DBTQ0rzf/, ws-headers: {Host: 173.82.205.212}}
+  - {name: 🇨🇳 中国-353.0KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇨🇳 中国-417.9KB/s(Youtube:不良林), server: 116.129.254.177, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇸🇬 新加坡-1.91MB/s(Youtube:不良林), server: sg.v2yyds.cc, port: 35214, type: trojan, password: 0896373c-7cd9-4221-b50d-9634990d6751, sni: sg.v2yyds.cc, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-257.7KB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇺🇸 美国-1.08MB/s(Youtube:不良林), server: aop.ssfree.ru, port: 443, type: vmess, uuid: 459039f4-0260-11ed-a8d1-000017022008, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /getweather, ws-headers: {Host: aop.ssfree.ru}}
+  - {name: 🇨🇳 中国-1.09MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-491.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-643.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-231.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-346.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-471.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-527.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-360.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-255.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-697.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-372.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-876.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-353.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-417.9KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.91MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-257.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-491.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-643.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-231.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-346.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-471.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-527.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-360.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-255.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-697.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-372.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-876.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-353.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-417.9KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.91MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-257.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-491.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-643.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-231.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-346.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-471.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-527.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-360.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-255.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-697.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-372.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-876.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-353.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-417.9KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.91MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-257.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-491.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-643.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-231.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-346.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-471.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-527.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-360.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-255.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-697.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-372.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-876.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-353.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-417.9KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.91MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-257.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-491.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-643.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-231.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-346.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-471.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-527.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-360.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-255.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-697.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-372.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-876.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-353.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-417.9KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.91MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-257.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-491.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-643.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-231.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-346.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-471.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-527.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-360.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-255.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-697.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-372.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-876.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-353.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-417.9KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.91MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-257.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-491.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-643.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-231.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-346.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-471.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-527.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-360.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-255.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-697.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-372.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-876.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-353.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-417.9KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.91MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-257.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
