--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-255.4KB/s(Youtube:不良林), server: 116.129.254.177, port: 65048, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-697.6KB/s(Youtube:不良林), server: 120.233.151.171, port: 8020, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
-  - {name: 🇨🇳 中国-372.8KB/s(Youtube:不良林), server: ftp.cn.debian.cdnet.in, port: 8030, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
-  - {name: 🇺🇸 美国-876.4KB/s(Youtube:不良林), server: 173.82.205.212, port: 18088, type: vmess, uuid: 727b39a8-a8b7-11ec-8f28-f9224e8647f5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /DBTQ0rzf/, ws-headers: {Host: 173.82.205.212}}
-  - {name: 🇨🇳 中国-353.0KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-417.9KB/s(Youtube:不良林), server: 116.129.254.177, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇸🇬 新加坡-1.91MB/s(Youtube:不良林), server: sg.v2yyds.cc, port: 35214, type: trojan, password: 0896373c-7cd9-4221-b50d-9634990d6751, sni: sg.v2yyds.cc, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-257.7KB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇺🇸 美国-1.08MB/s(Youtube:不良林), server: aop.ssfree.ru, port: 443, type: vmess, uuid: 459039f4-0260-11ed-a8d1-000017022008, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /getweather, ws-headers: {Host: aop.ssfree.ru}}
-  - {name: 🇨🇳 中国-1.09MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-537.0KB/s(Youtube:不良林), server: 120.233.151.171, port: 8070, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
+  - {name: 🇨🇳 中国-360.5KB/s(Youtube:不良林), server: ftp.cn.debian.cdnet.in, port: 8010, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
+  - {name: 🇦🇺 澳大利亚-638.1KB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇨🇳 中国-972.0KB/s(Youtube:不良林), server: cm01.db-link.in, port: 13302, type: vmess, uuid: c4fa06ca-c18f-37a4-ba0e-63537c0fb672, alterId: 1, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /db, ws-headers: {Host: cm01.db-link.in}}
+  - {name: 🇨🇳 中国-363.3KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65095, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 未知国家-440.6KB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
+  - {name: 🇺🇸 美国-1.63MB/s(Youtube:不良林), server: 38.75.136.161, port: 9090, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-377.6KB/s(Youtube:不良林), server: 120.233.150.146, port: 65024, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇭🇰 香港-477.4KB/s(Youtube:不良林), server: xmrh021.xmrth-node.xyz, port: 15886, type: vmess, uuid: 16b00fc9-a284-3063-90c9-de55a2b5cb61, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: xmrh021.xmrth-node.xyz}}
+  - {name: 🇨🇳 中国-426.9KB/s(Youtube:不良林), server: 120.233.150.146, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-255.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-697.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-372.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-876.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-353.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-417.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.91MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-257.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-537.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-638.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-972.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-363.3KB/s(Youtube:不良林)
+      - 未知国家-440.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-377.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-477.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-426.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-255.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-697.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-372.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-876.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-353.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-417.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.91MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-257.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-537.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-638.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-972.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-363.3KB/s(Youtube:不良林)
+      - 未知国家-440.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-377.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-477.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-426.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-255.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-697.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-372.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-876.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-353.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-417.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.91MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-257.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-537.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-638.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-972.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-363.3KB/s(Youtube:不良林)
+      - 未知国家-440.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-377.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-477.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-426.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-477.4KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-255.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-697.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-372.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-876.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-353.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-417.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.91MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-257.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-537.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-638.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-972.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-363.3KB/s(Youtube:不良林)
+      - 未知国家-440.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-377.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-477.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-426.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-255.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-697.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-372.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-876.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-353.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-417.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.91MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-257.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-537.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-638.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-972.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-363.3KB/s(Youtube:不良林)
+      - 未知国家-440.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-377.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-477.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-426.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-255.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-697.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-372.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-876.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-353.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-417.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.91MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-257.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-537.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-638.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-972.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-363.3KB/s(Youtube:不良林)
+      - 未知国家-440.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-377.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-477.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-426.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-255.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-697.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-372.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-876.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-353.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-417.9KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.91MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-257.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-537.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-638.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-972.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-363.3KB/s(Youtube:不良林)
+      - 未知国家-440.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-377.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-477.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-426.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
